--- a/Petrunin_M_Workbook1.ipynb
+++ b/Petrunin_M_Workbook1.ipynb
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "8a5e656a",
    "metadata": {},
    "outputs": [
@@ -937,10 +937,7 @@
    ],
    "source": [
     "x = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-    "if len(x)%2==0:\n",
-    "    x[0::2] = x[-2::-2]\n",
-    "else:\n",
-    "    x[0::2] = x[-1::-2]\n",
+    "x[::2] = reversed(x[::2])\n",
     "\n",
     "print(x)"
    ]
@@ -990,11 +987,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c2992734",
    "metadata": {},
    "source": [
-    "Расччитать синус от e радиан и вывести результат на экран"
+    "Расчитать синус от e радиан и вывести результат на экран."
    ]
   },
   {
