Added Workbook 2 and 3

--- a/Petrunin_M_Workbook1.ipynb
+++ b/Petrunin_M_Workbook1.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "362c62cd",
    "metadata": {},
    "outputs": [
@@ -301,12 +301,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, +infinty)\n"
+      "[-5, 5]\n"
      ]
     }
    ],
    "source": [
-    "x = 9\n",
+    "x = 0\n",
     "if x < -5:\n",
     "      print(\"(-infinty, -5)\")\n",
     "elif x > 5:\n",
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "813b93e7",
    "metadata": {},
    "outputs": [
@@ -772,12 +772,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['color eye', 'weight', 'gender']\n"
+      "['цвет глаз', 'вес', 'пол']\n"
      ]
     }
    ],
    "source": [
-    "list_human_ch = ['color eye', 'weight', 'gender']\n",
+    "list_human_ch = ['цвет глаз', 'вес', 'пол']\n",
     "\n",
     "print(list_human_ch)"
    ]
@@ -1040,13 +1040,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f1ecb573",
    "metadata": {},
    "source": [
     "Для функции $ sin(x e^{cos(x)}) $ на интервале [0; 10] с шагом 0,05 построить график функции, закрасить площадь под ним и вычислить значение этой площади.\n",
     "\n",
-    "Для вычисления площади воспользуйтесь функцией trapz(), вычисляющей интеграл по правилу трапеции. Для ее корректной работы необзодимо подключить следующие библиотеки:\n",
+    "Для вычисления площади воспользуйтесь функцией trapz(), вычисляющей интеграл по правилу трапеции. Для ее корректной работы необходимо подключить следующие библиотеки:\n",
     "\n",
     "from scipy.integrate import simps\n",
     "\n",
@@ -1063,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "cf4defa5",
    "metadata": {},
    "outputs": [
@@ -1543,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "973eab7d",
    "metadata": {},
    "outputs": [
