--- a/Petrunin_M_Workbook2.ipynb
+++ b/Petrunin_M_Workbook2.ipynb
@@ -128,6 +128,27 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Пример. Выполнить следующее:\n",
+    "1. Создать вектор (одномерный массив) размера 10, заполненный\n",
+    "нулями.\n",
+    "2. Создать вектор размера 10, заполненный единицами.\n",
+    "3. Создать вектор размера 10, заполненный заданным числом.\n",
+    "4. Создать вектор со значениями от 10 до 19."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Решение:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {},
@@ -452,35 +473,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 95,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 1 0 1 0 1 0 1]\n",
-      " [1 0 1 0 1 0 1 0]\n",
-      " [0 1 0 1 0 1 0 1]\n",
-      " [1 0 1 0 1 0 1 0]\n",
-      " [0 1 0 1 0 1 0 1]\n",
-      " [1 0 1 0 1 0 1 0]\n",
-      " [0 1 0 1 0 1 0 1]\n",
-      " [1 0 1 0 1 0 1 0]]\n"
-     ]
-    }
-   ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "# Создаем матрицу 8x8 с нулями\n",
-    "matrix = np.zeros((8, 8), dtype = int)\n",
-    "\n",
-    "# Заполняем её единицами с шахматным порядком\n",
-    "matrix[1::2, ::2] = 1\n",
-    "matrix[::2, 1::2] = 1\n",
-    "print(matrix)"
+    "## Решение:"
    ]
   },
   {
@@ -3054,31 +3051,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Признак:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.76058269],\n",
-       "       [-0.54177196],\n",
-       "       [-0.35009716],\n",
-       "       [-0.32271504],\n",
-       "       [ 1.97516685]])"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn import preprocessing\n",
@@ -3488,7 +3463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
