--- a/Petrunin_M_Workbook3.ipynb
+++ b/Petrunin_M_Workbook3.ipynb
@@ -1892,6 +1892,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Решение:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 91,
    "metadata": {},
