--- a/Petrunin_M_Workbook4.ipynb
+++ b/Petrunin_M_Workbook4.ipynb
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Пример 1.1.4\n",
+    "## 1.1.4 Пример\n",
     "\n",
     "Задание:\n",
     "<br>Необходимо проверить гипотезу, что наши точечно заданная функция ложится на кривую вида: $$ f(x, b) = b_0 + b_1exp(−b_2x^2). $$"
@@ -462,14 +462,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0003250477583666711\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'scipy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mscipy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msp\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39m#Добавим шума в данные, сделанные по функции f(x,b) с коэффициентами b = (0.25, 0.75, 0.5)\u001b[39;00m\n\u001b[0;32m      4\u001b[0m beta \u001b[39m=\u001b[39m (\u001b[39m0.25\u001b[39m, \u001b[39m0.75\u001b[39m, \u001b[39m0.5\u001b[39m)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'scipy'"
      ]
     }
    ],
